--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
           <h1 class="header">Browse our movies</h1>
         <div class="search">
-            <form action="/search-results" method="get" role="search">
+            <form action="#" method="get" role="search">
                 <input type="text" class="search-input" placeholder="Search by title or keyword" onchange="searchChange(event)"/>
                 <button id="search__submit"><i class="fa-solid fa-magnifying-glass"></i></button>
             </form>
